[package]
name = "markdown"
version = "0.1.0"
authors = ["ryanking13 <def6488@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler"
homepage = "https://github.com/ryanking13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
